--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "lodash": "^4.17.21",
     "notistack": "^2.0.5",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
