--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "notistack": "^2.0.5",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
